src/snapshots/schermz__schema__tests__schema_from_array.snap
---
source: src/schema.rs
expression: "Schema::from_json(&json).to_json()"
---
{
  "address": {
    "types": [
      "NULL",
      {
        "city": {
          "types": [
            "STRING(6, 7)"
          ]
        },
        "street": {
          "types": [
            "STRING(9, 17)"
          ]
        },
        "zip": {
          "types": [
            "STRING(0, 5)"
          ]
        }
      }
    ]
  },
  "age": {
    "types": [
      "NUMBER",
      "STRING(2)"
    ]
  },
  "name": {
    "types": [
      "STRING(8, 16)"
    ]
  },
  "phones": {
    "types": [
      "NULL",
      {
        "ARRAY": [
          {
            "mobile": {
              "types": [
                "STRING(11)"
              ]
            }
          },
          "STRING",
          "NUMBER"
        ]
      }
    ]
  },
  "title": {
    "types": [
      "STRING(0, 3)"
    ]
  }
}
