src/snapshots/schermz__schema__tests__schema_from_object.snap
---
source: src/schema.rs
expression: "Schema::from_json(&json).to_json()"
---
{
  "address": {
    "types": [
      {
        "city": {
          "types": [
            "STRING"
          ]
        },
        "street": {
          "types": [
            "STRING"
          ]
        }
      }
    ]
  },
  "age": {
    "types": [
      "NUMBER"
    ]
  },
  "name": {
    "types": [
      "STRING"
    ]
  },
  "phones": {
    "types": [
      {
        "ARRAY": [
          {
            "mobile": {
              "types": [
                "STRING"
              ]
            }
          },
          "STRING",
          "NUMBER"
        ]
      }
    ]
  },
  "title": {
    "types": [
      "EMPTY_STRING"
    ]
  }
}
